# Computer-Graphics

./: README.md
Assignment-1/: Assignment-1  Assignment-1.cpp  CMakeLists.txt  Floor.tga  Hay.tga  Marble.tga
Assignment2/: Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  RayTracer  RayTracer.cpp  Sphere.cpp
Lab01_Files/: Model3D  Model3D.cpp  Octahedron.off  Sphere.off  Teapot  Teapot.cpp
Lab02_Files/: Cannon  Cannon.cpp  Humanoid  Humanoid.cpp
Lab03_Files/III_Yard/: CMakeLists.txt  Yard  Yard.cpp
Lab03_Files/II_RailWagon/: RailWagon  RailWagon.cpp
Lab03_Files/I_Train/: Train  Train.cpp
Lab04_Files/II_Vase/: Vase  Vase.cpp
Lab04_Files/I_Boat/: Boat  Boat.cpp
Lab05_Files/: Tower  Tower.cpp
Lab07_Files/: RayTracer  RayTracer.cpp
Lab08_Files/: Plane.cpp  RayTracer  RayTracer.cpp
